--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,4 +1,4 @@
 <resources>
-    <string name="app_name">Testing with Kotlin</string>
+    <string name="app_name">Alarm Manager Kotlin</string>
     <string name="action_settings">Settings</string>
 </resources>
